--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "streetrace",
   "version": "1.0.0",
   "description": "project",
-  "main": "index.html",
+  "main": "index.js",
   "dependencies": {
     "body-parser": "^1.14.2",
     "router": "^1.1.3",
